syntax = "proto3";

package greeting;

message Greeting {
  string first_name = 1;
  string last_name = 2;
}
